minor logo fixes

--- a/index.html
+++ b/index.html
@@ -8,12 +8,12 @@
     <link rel="stylesheet" href="css/homeelements.css">
     <script src="js/index.js"></script>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap">
-    <link rel="icon" type="image/png" href="image/logo.png">
+    <link rel="icon" type="image/png" href="image/tiv logo.png">
 </head>
 <body>
     <div class = "nav">
         <div class = "logo">
-            <img src="image\logo.png">
+            <img src="image/hor logo.jpg">
         </div>
         <div class = "menu">
             <ul class = "menu-items">
@@ -65,7 +65,7 @@
                         </div>
                     </div>
                     <div id = "About-right">
-                        <img src = "image/About_pic.jpg" alt = "Indian Vidyarthi">
+                        <img src = "image/tiv logo.png" alt = "Indian Vidyarthi">
                     </div> 
                 </div>
             </div>
