modified homepage, icon and logo

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Indian Vidyarthi</title>
     <link rel="stylesheet" href="css/styles.css">
     <link rel="stylesheet" href="css/homeelements.css">
-
+    <link rel="stylesheet" href="css/work.css">
     <script src="js/index.js" defer></script>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap">
     <link rel="icon" type="image/png" href="image/tiv logo.png">
@@ -26,17 +26,14 @@
                 <li class = "menu-item">
                     <a href = "#About">About Us</a>
                 </li>
-                <li class = "menu-item">
-                    <a href = "#Blog">Our Blog</a>
-                </li>
-                <li class = "menu-item">
-                    <a href = "#Newsletter">Newsletter</a>
-                </li>
-                <li class = "menu-item">
-                    <a  href = "">Aspirants Network</a>
-                </li>
                 <li class="menu-item">
                     <a href = "blogs.html">Our Blog</a>
+                </li>
+                <li class = "menu-item">
+                    <a href = "newsletter.html">Newsletter</a>
+                </li>
+                <li class = "menu-item">
+                    <a  href = "">Summer Internship</a>
                 </li>
                 <li class = "menu-item">
                     <a href = "#Partners">Our Partners</a>
@@ -50,6 +47,11 @@
 
     </div>
     <div class="partitions" id = "Content">
+        <div class = "partitions", id = "Intro">
+            <video autoplay muted loop id="myVideo">
+                <source src="video/bg_vid.mp4" type="video/mp4">
+            </video>
+        </div>
         <div id = "About">
             <div id = "About-bg">
                 <div id = "About-bg-video">
@@ -78,112 +80,31 @@
                 </div>
             </div>
         </div>
-        <div class="partitions" id = "Blog">
-            <div id = "Blog-content">
-                <div class = "titles">
-                    Our Blog
+        <div class="partitions" id = "Work">
+            <a href = "">
+                <div id = "Work1">
+                    <img src="" alt="">
+                    <h1>Aspirants Network</h1>
+                    <p>Text aayega yahan pe</p>
                 </div>
-                <div class = "subtitles">
-                    Aren’t you curious to know what your peers think? 
-                    Well our blogs and articles are a culmination of vibrant 
-                    perspectives of budding writers. 
-                    We like to showcase the imagination of the people and their 
-                    outlook of an eventful world out there. 
+            </a>
+            <a href = "">
+                <div id = "Work2">
+                    <img src="" alt="">
+                    <h1>Newsletter</h1>
+                    <p>Text aayega yahan pe</p>
                 </div>
-                <div id = "Blog-content1">
-                    <div id = "Blog-content-left">
-                        <div id = "Blog-display">
-                            <div id = "Blog-display-title">
-                                Blog 1 Title
-                            </div>
-                            <div id = "Blog-display-content">
-                                Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                                Sed ultrices felis nisi, et lacinia lorem pharetra fringilla.
-                                Aenean imperdiet consectetur nunc, sed ornare orci aliquet id.
-                                Curabitur eget cursus diam. Vestibulum posuere libero sapien, ac sagittis mi tempus quis.
-                                Nunc ullamcorper eleifend justo ultricies iaculis.
-                            </div>
-                        </div>
-                    </div>
-                    <div id = "Blog-content-right">
-                        <a href = "blogs.html">
-                            <button class="c-btn" >Read More</button>
-                        </a>
-                    </div>
+            </a>
+            <a href = "">
+                <div id = "Work3">
+                    <img src="" alt="">
+                    <h1>Summer Program</h1>
+                    <p>Text aayega yahan pe</p>
                 </div>
-            </div>
+            </a>
         </div>
-        <div class="partitions" id = "Newsletter">
-            <div id = "Newsletter-content">
-                <div class = "titles">
-                    Our Newsletter
-                </div>
-                <div class = "subtitles">
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
-                    Sed ultrices felis nisi, et lacinia lorem pharetra fringilla. 
-                </div>
-                <div id = "Newsletter-buttons">
-                    <div id = "Newsletter-left">
-                        <table>
-                            <tr> 
-                                <td class = "card">
-                                    <a href = "https://www.google.com">
-                                        <div class="flip-card">
-                                            <div class="flip-card-inner">
-                                                <div class="flip-card-front">
-                                                    <img src="image/newsletter1.jpeg" alt="May 2023" style="width:16.875vh;height:30vh;">
-                                                </div>
-                                            <div class="flip-card-back">
-                                                <h1>May 2023</h1>
-                                                <p style="font-size: small; font-weight: 300;">
-                                                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
-                                                </p>
-                                            </div>
-                                        </div>
-                                    </a>
-                                </td>
-                                <td class = "card">
-                                    <a href = "https://www.google.com">
-                                        <div class="flip-card">
-                                            <div class="flip-card-inner">
-                                                <div class="flip-card-front">
-                                                    <img src="image/newsletter1.jpeg" alt="June 2023" style="width:16.875vh;height:30vh;">
-                                                </div>
-                                            <div class="flip-card-back">
-                                                <h1>June 2023</h1>
-                                                <p style="font-size: small; font-weight: 300;">
-                                                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
-                                                </p>
-                                            </div>
-                                        </div>
-                                    </a>
-                                </td>
-                                <td class = "card">
-                                    <a href = "https://www.google.com">
-                                        <div class="flip-card">
-                                            <div class="flip-card-inner">
-                                                <div class="flip-card-front">
-                                                    <img src="image/newsletter1.jpeg" alt="July 2023" style="width:16.875vh;height:30vh;">
-                                                </div>
-                                            <div class="flip-card-back">
-                                                <h1>July 2023</h1>
-                                                <p style="font-size: small; font-weight: 300;">
-                                                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
-                                                </p>
-                                            </div>
-                                        </div>
-                                    </a>
-                                    </div>
-                                </td>
-                            </tr>
-                        </table>
-                    </div>
-                <div id = "Newsletter-right">
-                    <a href = "newsletter.html">
-                        <button class="c-btn" >Read More</button>
-                    </a>
-                </div>
-            </div>
+        <div class="partitions" id = "Testimony">
+            
         </div>
         <div class="partitions" id = "Partners">
 
