--- a/blogs.html
+++ b/blogs.html
@@ -7,15 +7,14 @@
     <link rel="stylesheet" href="css/styles.css">
     <link rel="stylesheet" href="css/homeelements.css">
     <link rel="stylesheet" href="css/blog.css">
-    <link rel="icon" type="image/x-icon" href="https://media.licdn.com/dms/image/C4D0BAQEmRfOpHlHwrw/company-logo_200_200/0/1678087546979?e=1697673600&v=beta&t=Zpwfs6JAhD5JCfAFa81oSQnejXWoWbjW-LtCKQcIeBI">
-    <script src="js/index.js"></script>
+    <link rel="icon" type="image/png" href="image/tiv logo.png"><script src="js/index.js"></script>
     <script src="js/blog.js"></script>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap">
 </head>
 <body>
     <div class = "nav">
         <div class = "logo">
-            <img src = "https://media.licdn.com/dms/image/C4D0BAQEmRfOpHlHwrw/company-logo_200_200/0/1678087546979?e=1697673600&v=beta&t=Zpwfs6JAhD5JCfAFa81oSQnejXWoWbjW-LtCKQcIeBI" alt = "logo">
+            <img src="image/hor logo.jpg">
         </div>
         <div class = "menu">
             <ul class = "menu-items">
