--- a/newsletter.html
+++ b/newsletter.html
@@ -7,14 +7,14 @@
     <link rel="stylesheet" href="css/styles.css">
     <link rel="stylesheet" href="css/homeelements.css">
     <link rel="stylesheet" href="css/blog.css">
-    <link rel="icon" type="image/x-icon" href="https://media.licdn.com/dms/image/C4D0BAQEmRfOpHlHwrw/company-logo_200_200/0/1678087546979?e=1697673600&v=beta&t=Zpwfs6JAhD5JCfAFa81oSQnejXWoWbjW-LtCKQcIeBI">
     <link rel="stylesheet" href="css/cardstyles.css">
+    <link rel="icon" type="image/png" href="image/tiv logo.png">
     <script src="js/index.js"></script>
 </head>
 <body>
     <div class = "nav">
         <div class = "logo">
-            <img src = "https://media.licdn.com/dms/image/C4D0BAQEmRfOpHlHwrw/company-logo_200_200/0/1678087546979?e=1697673600&v=beta&t=Zpwfs6JAhD5JCfAFa81oSQnejXWoWbjW-LtCKQcIeBI" alt = "logo">     
+            <img src="image/hor logo.jpg">
         </div>
         <div class = "menu">
             <ul class = "menu-items">
