--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
     <link rel="stylesheet" href="css/styles.css">
     <link rel="stylesheet" href="css/homeelements.css">
     <link rel="stylesheet" href="css/work.css">
-    <script src="js/index.js" defer></script>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap">
     <link rel="icon" type="image/png" href="image/tiv logo.png">
+    <script src="js/index.js" defer></script>
 </head>
 <body>
     <div class = "nav" id="nav">
@@ -48,9 +48,7 @@
     </div>
     <div class="partitions" id = "Content">
         <div class = "partitions", id = "Intro">
-            <video autoplay muted loop id="myVideo">
-                <source src="video/bg_vid.mp4" type="video/mp4">
-            </video>
+            <img id="myVideo" src="video/TIVHome.gif"/>
         </div>
         <div id = "About">
             <div id = "About-bg">
@@ -88,9 +86,9 @@
                     <p>Text aayega yahan pe</p>
                 </div>
             </a>
-            <a href = "">
-                <div id = "Work2">
-                    <img src="" alt="">
+            <a href = "newsletter.html">
+                <div id = "Work2" >
+                    <img src="">
                     <h1>Newsletter</h1>
                     <p>Text aayega yahan pe</p>
                 </div>
