--- a/team.html
+++ b/team.html
@@ -6,21 +6,6 @@
     <title>Our Team</title>
     <link rel="stylesheet" href="css/styles.css">
     <link rel="stylesheet" href="css/homeelements.css">
-    <link rel="stylesheet" href="css/blog.css">
-    <link rel="icon" type="image/png" href="image/tiv logo.png"><script src="js/index.js"></script>
-    <script src="js/blog.js"></script>
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap">
-</head>
-<body>
-    <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Our Team</title>
-    <link rel="stylesheet" href="css/styles.css">
-    <link rel="stylesheet" href="css/homeelements.css">
-    <link rel="stylesheet" href="css/blog.css">
     <link rel="stylesheet" href="css/team.css">
     <link rel="icon" type="image/png" href="image/tiv logo.png"><script src="js/index.js"></script>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap">
@@ -39,108 +24,114 @@
         </div>
     </div>
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-    <h1 class="heading"><center>Our Team</center></h1>
+    <h1 class="heading" style="color: white;"><center>Our Team</center></h1>
         <div class="content">
             <!-- card -->
-            <a href="https://www.linkedin.com/in/meet-sijariya-81961a231/" target="blank_" style="text-decoration: none">
-            <div class="card">
-                <div class="cardbgs" style="background-image: url('image/Meet Sijariya.jpeg');"></div>
-                    <p class="title">Meet Sijariya</p>
-                    <p class="text">Founder</p>
-            </div></a>
-            <a href="https://www.linkedin.com/in/aman-deep-savaranya-0973ab261" target="blank_" style="text-decoration: none">
-            <div class="card">
-                <div class="cardbgs" style="background-image: url('image/Aman Deep Savaranya .jpg');"></div>
-                    <p class="title">Amandeep</p>
-                    <p class="text">Design Head</p>
-            </div></a>
-        </div>
-
-        <div class="content">
-            <!-- card -->
-            <a href="https://www.linkedin.com/in/tarush-agarwal-7b0a68249/" target="blank_" style="text-decoration: none">
-            <div class="card">
-                <div class="cardbgs" style="background-image: url('');"></div>
-                    <p class="title">Tarush Agarwal</p>
+            <a href="https://www.linkedin.com/in/meet-sijariya-81961a231/"  target="blank_" class="card">
+            <img src="image/Meet Sijariya.jpeg" class="cardimg"/>
+            <div class="cardtext">
+                    <p class="title">Meet Sijariya</p> 
                     <p class="text">Developer</p>
             </div></a>
-            <a href="https://www.linkedin.com/in/hardik-bansal-9837ba256" target="blank_" style="text-decoration: none">
-            <div class="card">
-                <div class="cardbgs" style="background-image: url('');"></div>
-                    <p class="title">Hardik Bansal</p>
-                    <p class="text">Developer</p>
-            </div></a>
-            <a href="https://www.linkedin.com/in/samyak-jain-329249256/" target="blank_" style="text-decoration: none">
-            <div class="card">
-                <div class="cardbgs" style="background-image: url('');"></div>
-                    <p class="title">Samyak Jain</p>
-                    <p class="text">Developer</p>
-            </div></a>
-            <a href="https://www.linkedin.com/in/hardik-singla-163112232" target="blank_" style="text-decoration: none">
-            <div class="card">
-                <div class="cardbgs" style="background-image: url('');"></div>
-                    <p class="title">Hardik Singla</p>
+            <a href="https://www.linkedin.com/in/aman-deep-savaranya-0973ab261"  target="blank_" class="card">
+            <img src="image/Aman Deep Savaranya .jpg" class="cardimg"/>
+            <div class="cardtext">
+                    <p class="title">Amandeep Savaranya</p> 
                     <p class="text">Developer</p>
             </div></a>
         </div>
 
         <div class="content">
             <!-- card -->
-            <a href="https://www.linkedin.com/in/rumish" target="blank_" style="text-decoration: none">
-            <div class="card">
-                <div class="cardbgs" style="background-image: url('image/Rumish.jpg');"></div>
-                    <p class="title">Rumish Ali Saif</p>
+            <a href="https://www.linkedin.com/in/tarush-agarwal-7b0a68249/"  target="blank_" class="card">
+            <img src="image/Tarush Agarwal.jpg" class="cardimg"/>
+            <div class="cardtext">
+                    <p class="title">Tarush Agarwal</p> 
                     <p class="text">Developer</p>
             </div></a>
-            <a href="https://www.linkedin.com/in/reet-singh/" target="blank_" style="text-decoration: none">
-            <div class="card">
-                <div class="cardbgs" style="background-image: url('');"></div>
-                    <p class="title">Reet Singh</p>
+            <a href="https://www.linkedin.com/in/hardik-bansal-9837ba256"  target="blank_" class="card">
+            <img src="image/Hardik Bansal.jpg" class="cardimg"/>
+            <div class="cardtext">
+                    <p class="title">Hardik Bansal</p> 
                     <p class="text">Developer</p>
             </div></a>
-            <a href="https://www.linkedin.com/in/suhanee-chugh-a10b7a1b3" target="blank_" style="text-decoration: none">
-            <div class="card">
-                <div class="cardbgs" style="background-image: url('');"></div>
-                    <p class="title">Suhanee Chugh</p>
+            <a href="https://www.linkedin.com/in/samyak-jain-329249256/"  target="blank_" class="card">
+            <img src="image/Samyak Jain.jpg" class="cardimg"/>
+            <div class="cardtext">
+                    <p class="title">Samyak Jain</p> 
                     <p class="text">Developer</p>
             </div></a>
-            <a href="https://www.linkedin.com/in/vigaas-singh-8521321b3" target="blank_" style="text-decoration: none">
-            <div class="card">
-                <div class="cardbgs" style="background-image: url('');"></div>
-                    <p class="title">Vigaas Singh </p>
+            <a href="https://www.linkedin.com/in/hardik-singla-163112232"  target="blank_" class="card">
+            <img src="image/Hardik Singla.jpg" class="cardimg"/>
+            <div class="cardtext">
+                    <p class="title">Hardik Singla</p> 
+                    <p class="text">Developer</p>
+            </div></a>
+        </div>
+
+        <div class="content">
+            <!-- card -->
+            <a href="https://www.linkedin.com/in/rumish"  target="blank_" class="card">
+            <img src="image/Rumish.jpg" class="cardimg"/>
+            <div class="cardtext">
+                    <p class="title">Rumish Ali Saif</p> 
+                    <p class="text">Developer</p>
+            </div></a>
+            <a href="https://www.linkedin.com/in/suhanee-chugh-a10b7a1b3"  target="blank_" class="card">
+            <img src="image\Vardaan Gahlot .jpg" class="cardimg"/>
+            <div class="cardtext">
+                    <p class="title">Suhanee Chugh</p> 
+                    <p class="text">Developer</p>
+            </div></a>
+            <a href="https://www.linkedin.com/in/vigaas-singh-8521321b3"  target="blank_" class="card">
+            <img src="image\Vardaan Gahlot .jpg" class="cardimg"/>
+            <div class="cardtext">
+                    <p class="title">Vigaas Singh</p> 
+                    <p class="text">Developer</p>
+            </div></a>
+            <a href="https://www.linkedin.com/in/vardaan-gahlot-67447416b"  target="blank_" class="card">
+            <img src="image\Vardaan Gahlot .jpg" class="cardimg"/>
+            <div class="cardtext">
+                    <p class="title">Vardaan Gahlot</p> 
+                    <p class="text">Developer</p>
+            </div></a>
+            <a href="https://www.linkedin.com/in/reet-singh/"  target="blank_" class="card">
+            <img src="image\Reet Singh.jpg" class="cardimg"/>
+            <div class="cardtext">
+                    <p class="title">Reet Singh</p> 
                     <p class="text">Developer</p>
             </div></a>
         </div>
         <div class="content">
             <!-- card -->
-            <a href="https://www.linkedin.com/in/aarya-saraf-03b230220/" target="blank_" style="text-decoration: none">
-            <div class="card">
-                <div class="cardbgs" style="background-image: url('');"></div>
-                    <p class="title">Aarya Saraf</p>
+            <a href="https://www.linkedin.com/in/aarya-saraf-03b230220/"  target="blank_" class="card">
+            <img src="image/Aarya Saraf.jpeg" class="cardimg"/>
+            <div class="cardtext">
+                    <p class="title">Aarya Saraf</p> 
                     <p class="text">Developer</p>
             </div></a>
-            <a href="" target="blank_" style="text-decoration: none">
-            <div class="card">
-                <div class="cardbgs" style="background-image: url('');"></div>
-                    <p class="title">Tanav Bhatia </p>
+            <a href=""  target="blank_" class="card">
+            <img src="image/Tanav Bhatia.jpg" class="cardimg"/>
+            <div class="cardtext">
+                    <p class="title">Tanav Bhatia</p> 
                     <p class="text">Developer</p>
             </div></a>
-            <a href="" target="blank_" style="text-decoration: none">
-            <div class="card">
-                <div class="cardbgs" style="background-image: url('');"></div>
-                    <p class="title">Anshika Raj</p>
+            <a href="" target="blank_" class="card">
+            <img src="image/Vani Sen.jpg" class="cardimg"/>
+            <div class="cardtext">
+                    <p class="title">Anshika Raj</p> 
                     <p class="text">Developer</p>
             </div></a>
-            <a href="https://www.linkedin.com/in/android-aggarwal" target="blank_" style="text-decoration: none">
-            <div class="card">
-                <div class="cardbgs" style="background-image: url('');"></div>
-                    <p class="title">Anirudh Aggarwal</p>
+            <a href="https://www.linkedin.com/in/android-aggarwal"  target="blank_" class="card">
+            <img src="image/Vani Sen.jpg" class="cardimg"/>
+            <div class="cardtext">
+                    <p class="title">Anirudh Aggarwal</p> 
                     <p class="text">Developer</p>
             </div></a>
-            <a href="https://www.linkedin.com/in/vani-sen-037b2422a" target="blank_" style="text-decoration: none">
-            <div class="card">
-                <div class="cardbgs" style="background-image: url('image/Vani Sen.jpg');"></div>
-                    <p class="title">Vani Sen</p>
+            <a href="https://www.linkedin.com/in/vani-sen-037b2422a"  target="blank_" class="card">
+            <img src="image/Vani Sen.jpg" class="cardimg"/>
+            <div class="cardtext">
+                    <p class="title">Vani Sen</p> 
                     <p class="text">Developer</p>
             </div></a>
         </div>
