did stuff hopefully didnt break everything

--- a/index.html
+++ b/index.html
@@ -105,7 +105,18 @@
             
         </div>
         <div class="partitions" id = "Partners">
-
+            <figure>
+                <img src="image/newsletter1.jpg" alt="pt1">
+                <figcaption>Partner 1</figcaption>
+            </figure>
+            <figure style="--c:#fff5">
+                <img src="image/newsletter2.jpg" alt="pt2">
+                <figcaption>Partner 2</figcaption>
+            </figure>
+            <figure style="--c:#fff5">
+                <img src="image/newsletter3.jpg" alt="pt3">
+                <figcaption>Partner 3</figcaption>
+            </figure>
         </div>
         <div class="partitions" id = "Contact">
 
