--- a/team.html
+++ b/team.html
@@ -31,13 +31,13 @@
             <img src="image/Meet Sijariya.jpeg" class="cardimg"/>
             <div class="cardtext">
                     <p class="title">Meet Sijariya</p> 
-                    <p class="text">Developer</p>
+                    <p class="text">noone</p>
             </div></a>
             <a href="https://www.linkedin.com/in/aman-deep-savaranya-0973ab261"  target="blank_" class="card">
             <img src="image/Aman Deep Savaranya .jpg" class="cardimg"/>
             <div class="cardtext">
                     <p class="title">Amandeep Savaranya</p> 
-                    <p class="text">Developer</p>
+                    <p class="text">noone</p>
             </div></a>
         </div>
 
@@ -86,7 +86,7 @@
             <a href="https://www.linkedin.com/in/vigaas-singh-8521321b3"  target="blank_" class="card">
             <img src="image\Vardaan Gahlot .jpg" class="cardimg"/>
             <div class="cardtext">
-                    <p class="title">Vigaas Singh</p> 
+                    <p class="title">nigaas Singh</p> 
                     <p class="text">Developer</p>
             </div></a>
             <a href="https://www.linkedin.com/in/vardaan-gahlot-67447416b"  target="blank_" class="card">
