--- a/team.html
+++ b/team.html
@@ -86,7 +86,7 @@
             <a href="https://www.linkedin.com/in/vigaas-singh-8521321b3"  target="blank_" class="card">
             <img src="image\Vardaan Gahlot .jpg" class="cardimg"/>
             <div class="cardtext">
-                    <p class="title">nigaas Singh</p> 
+                    <p class="title">Vigaas Singh</p> 
                     <p class="text">Developer</p>
             </div></a>
             <a href="https://www.linkedin.com/in/vardaan-gahlot-67447416b"  target="blank_" class="card">
