--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                     <a href = "newsletter.html">Newsletter</a>
                 </li>
                 <li class = "menu-item">
-                    <a  href = "">Summer Internship</a>
+                    <a  href = "summer.html">Summer Internship</a>
                 </li>
                 <li class = "menu-item">
                     <a href = "#Partners">Our Partners</a>
@@ -81,7 +81,7 @@
         <div class="partitions" id = "Work">
             <a href = "">
                 <div id = "Work1">
-                    <img src="" alt="">
+                    <img src="image/aspirant.png" alt="">
                     <h1>Aspirants Network</h1>
                     <p>Text aayega yahan pe</p>
                 </div>
