--- a/team.html
+++ b/team.html
@@ -5,7 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Our Team</title>
     <link rel="stylesheet" href="css/styles.css">
-    <link rel="stylesheet" href="css/homeelements.css">
     <link rel="stylesheet" href="css/team.css">
     <link rel="icon" type="image/png" href="image/tiv logo.png"><script src="js/index.js"></script>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap">
@@ -24,7 +23,8 @@
         </div>
     </div>
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-    <h1 class="heading" style="color: white;"><center>Our Team</center></h1>
+    <h1 class="heading" style="color: white;"><center>THE INDIAN VIDYARTHI</center></h1>
+    <h1 class="heading" style="color: white;"><center>NATIONAL WORKFORCE</center></h1>
         <div class="content">
             <!-- card -->
             <a href="https://www.linkedin.com/in/meet-sijariya-81961a231/"  target="blank_" class="card">
