--- a/team.html
+++ b/team.html
@@ -24,7 +24,7 @@
     </div>
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <h1 class="heading" style="color: white;"><center>THE INDIAN VIDYARTHI</center></h1>
-    <h1 class="heading" style="color: white;"><center>NATIONAL WORKFORCE</center></h1>
+    <h2 class="heading2" style="color: white;"><center>NATIONAL WORKFORCE</center></h2>
         <div class="content">
             <!-- card -->
             <a href="https://www.linkedin.com/in/meet-sijariya-81961a231/"  target="blank_" class="card">
