--- a/index.html
+++ b/index.html
@@ -102,33 +102,36 @@
                 </div>
             </a>
         </div>
+        <div class="partitions" id = "PartnersH">
+            <h1 class="heading" style="color: white;"><center>Our Partners</center></h1>
+        </div>
         <div class="partitions" id = "Partners">
             <a href = "">
                 <div id = "Part1">
                     <img src="image/newsletter1.jpg" alt="">
                     <h1>Partner 1</h1>
-                    <p>Nhi milenege</p>
+                    <p>boo</p>
                 </div>
             </a>
             <a href = "newsletter.html">
                 <div id = "Part2" >
                     <img src="image/newsletter1.jpg">
                     <h1>Partner 2</h1>
-                    <p>Nhi milenege</p>
+                    <p>boo</p>
                 </div>
             </a>
             <a href = "">
                 <div id = "Part3">
                     <img src="image/newsletter1.jpg" alt="">
                     <h1>Partner 3</h1>
-                    <p>Nhi milenege</p>
+                    <p>boo</p>
                 </div>
             </a>
             <a href = "">
                 <div id = "Part4">
                     <img src="image/newsletter1.jpg" alt="">
                     <h1>Partner 3</h1>
-                    <p>Nhi milenege</p>
+                    <p>boo</p>
                 </div>
             </a>
         </div>
@@ -137,28 +140,28 @@
                 <div id = "Part1">
                     <img src="image/newsletter1.jpg" alt="">
                     <h1>Partner 4</h1>
-                    <p>Nhi milenege</p>
+                    <p>boo</p>
                 </div>
             </a>
             <a href = "newsletter.html">
                 <div id = "Part2" >
                     <img src="image/newsletter1.jpg">
                     <h1>Partner 5</h1>
-                    <p>Nhi milenege</p>
+                    <p>boo</p>
                 </div>
             </a>
             <a href = "">
                 <div id = "Part3">
                     <img src="image/newsletter1.jpg" alt="">
                     <h1>Partner 6</h1>
-                    <p>Nhi milenege</p>
+                    <p>boo</p>
                 </div>
             </a>
             <a href = "">
                 <div id = "Part4">
                     <img src="image/newsletter1.jpg" alt="">
                     <h1>Partner 6</h1>
-                    <p>Nhi milenege</p>
+                    <p>boo</p>
                 </div>
             </a>
         </div>
@@ -167,28 +170,28 @@
                 <div id = "Part1">
                     <img src="image/newsletter1.jpg" alt="">
                     <h1>Partner 9</h1>
-                    <p>Nhi milenege</p>
+                    <p>boo</p>
                 </div>
             </a>
             <a href = "newsletter.html">
                 <div id = "Part2" >
                     <img src="image/newsletter1.jpg">
                     <h1>Partner 10</h1>
-                    <p>Nhi milenege</p>
+                    <p>boo</p>
                 </div>
             </a>
             <a href = "">
                 <div id = "Part3">
                     <img src="image/newsletter1.jpg" alt="">
                     <h1>Partner 11</h1>
-                    <p>Nhi milenege</p>
+                    <p>lols</p>
                 </div>
             </a>
             <a href = "">
                 <div id = "Part4">
                     <img src="image/newsletter1.jpg" alt="">
                     <h1>Partner 12</h1>
-                    <p>Nhi milenege</p>
+                    <p>I'm Batman!</p>
                 </div>
             </a>
         </div>
