--- a/index.html
+++ b/index.html
@@ -89,14 +89,14 @@
             </a>
             <a href = "newsletter.html">
                 <div id = "Work2" >
-                    <img src="">
+                    <img src="image/aspirant.png">
                     <h1>Newsletter</h1>
                     <p>Text aayega yahan pe</p>
                 </div>
             </a>
             <a href = "">
                 <div id = "Work3">
-                    <img src="" alt="">
+                    <img src="image/aspirant.png" alt="">
                     <h1>Summer Program</h1>
                     <p>Text aayega yahan pe</p>
                 </div>
