--- a/index.html
+++ b/index.html
@@ -79,24 +79,27 @@
                 </div>
             </div>
         </div>
+        <div class="partitions" id = "WorkH">
+            <h1 class="heading" style="color: white;"><center>Our Work</center></h1>
+        </div>
         <div class="partitions" id = "Work">
-            <a href = "">
+            <a href = "#Work">
                 <div id = "Work1">
                     <img src="image/aspirant.png" alt="">
                     <h1>Aspirants Network</h1>
-                    <p>Text aayega yahan pe</p>
+                    <p>Coming Soon!</p>
                 </div>
             </a>
             <a href = "newsletter.html">
                 <div id = "Work2" >
-                    <img src="image/aspirant.png">
+                    <img src="image/Newsletter.jpg">
                     <h1>Newsletter</h1>
                     <p>Text aayega yahan pe</p>
                 </div>
             </a>
-            <a href = "">
+            <a href = "summer.html">
                 <div id = "Work3">
-                    <img src="image/aspirant.png" alt="">
+                    <img src="image/Summer Program.jpg" alt="">
                     <h1>Summer Program</h1>
                     <p>Text aayega yahan pe</p>
                 </div>
