--- a/team.html
+++ b/team.html
@@ -43,7 +43,7 @@
                     <p class="text">Director</p>
             </div></a>
             <a href="https://www.linkedin.com/in/suhanee-chugh-a10b7a1b3"  target="blank_" class="card">
-            <img src="image\Vardaan Gahlot .jpg" class="cardimg"/>
+            <img src="image\Suhani Chugh.jpg" class="cardimg"/>
             <div class="cardtext">
                     <p class="title">Suhanee Chugh</p> 
                     <p class="text">Director</p>
