--- a/index.html
+++ b/index.html
@@ -74,7 +74,9 @@
                         </div>
                     </div>
                     <div id = "About-right">
-                        <img src = "image/tiv logo.png" alt = "Indian Vidyarthi">
+                        <video autoplay muted loop id="logo_vid">
+                            <source src="video/TIVHome2.mp4" type="video/mp4">
+                        </video>
                     </div> 
                 </div>
             </div>
