--- a/blogs.html
+++ b/blogs.html
@@ -9,16 +9,6 @@
     <link rel="stylesheet" href="css/blog.css">
     <link rel="icon" type="image/png" href="image/tiv logo.png"><script src="js/index.js"></script>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap">
-    <!-- Google font -->
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Titillium+Web:400,400i,600,600i,700,700i,900">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans:400,400i,600,600i,700,700i,800,800i">
-    <!-- Bootstrap -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
-    <!-- icofont -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/ionic/1.3.2/css/ionic.css">
-    <!-- carousel -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.theme.default.css">
 </head>
 <body>
     <div class = "nav">
@@ -34,72 +24,115 @@
         </div>
     </div>
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-    <section class="blog_section">
-        <div class="container">
-            <div class="blog_content">
-                <div class="owl-carousel owl-theme">
-                    <div class="blog_item">
-                        <div class="blog_image">
-                            <img class="img-fluid" src="https://cdn.pixabay.com/photo/2019/03/10/18/31/hong-kong-4046913_960_720.jpg" alt="images not found">
-                            <span><i class="icon ion-md-create"></i></span>
-                        </div>
-                        <div class="blog_details">
-                            <div class="blog_title">
-                                <h5><a href="#">We are best for any industrial & business solution.</a></h5>
-                            </div>
-                            <ul>
-                                <li><i class="icon ion-md-person"></i>Alexa</li>
-                                <li><i class="icon ion-md-calendar"></i>August 1, 2020</li>
-                            </ul>
-                            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem...</p>
-                            <a href="#">Read More<i class="icofont-long-arrow-right"></i></a>
-                        </div>
-                    </div>                        
-                    <div class="blog_item">
-                        <div class="blog_image">
-                            <img class="img-fluid" src="https://cdn.pixabay.com/photo/2015/07/09/22/45/tree-838667_960_720.jpg" alt="images not found">
-                            <span><i class="icon ion-md-create"></i></span>
-                        </div>
-                        <div class="blog_details">
-                            <div class="blog_title">
-                                <h5><a href="#">We are best for any industrial & business solution.</a></h5>
-                            </div>
-                            <ul>
-                                <li><i class="icon ion-md-person"></i>Alexa</li>
-                                <li><i class="icon ion-md-calendar"></i>August 1, 2020</li>
-                            </ul>
-                            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem...</p>
-                            <a href="#">Read More<i class="icofont-long-arrow-right"></i></a>
-                        </div>
-                    </div>                        
-                    <div class="blog_item">
-                        <div class="blog_image">
-                            <img class="img-fluid" src="https://cdn.pixabay.com/photo/2015/10/30/20/13/sunrise-1014712_960_720.jpg" alt="images not found">
-                            <span><i class="icon ion-md-create"></i></span>
-                        </div>
-                        <div class="blog_details">
-                            <div class="blog_title">
-                                <h5><a href="#">We are best for any industrial & business solution.</a></h5>
-                            </div>
-                            <ul>
-                                <li><i class="icon ion-md-person"></i>Alexa</li>
-                                <li><i class="icon ion-md-calendar"></i>August 1, 2020</li>
-                            </ul>
-                            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem...</p>
-                            <a href="#">Read More<i class="icofont-long-arrow-right"></i></a>
-                        </div>
-                    </div>
-                </div>
+    <div class="container">
+        <a href="blogs/blog1.html"><div class="card">
+          <div class="card__header">
+            <img src="https://source.unsplash.com/600x400/?computer" alt="card__image" class="card__image" width="600">
+          </div>
+          <div class="card__body">
+            <span class="tag tag-blue">Technology</span>
+            <h4>What's new in 2022 Tech</h4>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi perferendis molestiae non nemo doloribus. Doloremque, nihil! At ea atque quidem!</p>
+          </div>
+          <div class="card__footer">
+            <div class="user">
+              <div class="user__info">
+                <h5>Jane Doe</h5>
+                <small>2h ago</small>
+              </div>
             </div>
-        </div>
-    </section>
-    <!-- Jquery -->
-    <script src="https://code.jquery.com/jquery-3.3.1.js"></script>
-    <!-- bootstrap -->
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.0/js/bootstrap.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"></script>
-    <!-- carousel -->
-    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.js"></script>
-    <script src="js/blog.js"></script>
+          </div>
+        </div></a>
+        <a href="blogs/blog2.html"><div class="card">
+          <div class="card__header">
+            <img src="https://source.unsplash.com/600x400/?food" alt="card__image" class="card__image" width="600">
+          </div>
+          <div class="card__body">
+            <span class="tag tag-brown">Food</span>
+            <h4>Delicious Food</h4>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi perferendis molestiae non nemo doloribus. Doloremque, nihil! At ea atque quidem!</p>
+          </div>
+          <div class="card__footer">
+            <div class="user">
+              <div class="user__info">
+                <h5>Jony Doe</h5>
+                <small>Yesterday</small>
+              </div>
+            </div>
+          </div>
+        </div></a>
+        <a href="blogs/blog3.html"><div class="card">
+          <div class="card__header">
+            <img src="https://source.unsplash.com/600x400/?car,automobile" alt="card__image" class="card__image" width="600">
+          </div>
+          <div class="card__body">
+            <span class="tag tag-red">Automobile</span>
+            <h4>Race to your heart content</h4>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi perferendis molestiae non nemo doloribus. Doloremque, nihil! At ea atque quidem!</p>
+          </div>
+          <div class="card__footer">
+            <div class="user">
+              <div class="user__info">
+                <h5>John Doe</h5>
+                <small>2d ago</small>
+              </div>
+            </div>
+          </div>
+        </div></a>
+        <a href="blogs/blog3.html"><div class="card">
+            <div class="card__header">
+              <img src="https://source.unsplash.com/600x400/?car,automobile" alt="card__image" class="card__image" width="600">
+            </div>
+            <div class="card__body">
+              <span class="tag tag-red">Automobile</span>
+              <h4>Race to your heart content</h4>
+              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi perferendis molestiae non nemo doloribus. Doloremque, nihil! At ea atque quidem!</p>
+            </div>
+            <div class="card__footer">
+              <div class="user">
+                <div class="user__info">
+                  <h5>John Doe</h5>
+                  <small>2d ago</small>
+                </div>
+              </div>
+            </div>
+        </div></a>
+        <a href="blogs/blog3.html"><div class="card">
+            <div class="card__header">
+              <img src="https://source.unsplash.com/600x400/?car,automobile" alt="card__image" class="card__image" width="600">
+            </div>
+            <div class="card__body">
+              <span class="tag tag-red">Automobile</span>
+              <h4>Race to your heart content</h4>
+              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi perferendis molestiae non nemo doloribus. Doloremque, nihil! At ea atque quidem!</p>
+            </div>
+            <div class="card__footer">
+              <div class="user">
+                <div class="user__info">
+                  <h5>John Doe</h5>
+                  <small>2d ago</small>
+                </div>
+              </div>
+            </div>
+      </div></a>
+        <a href="blogs/blog3.html"><div class="card">
+            <div class="card__header">
+              <img src="https://source.unsplash.com/600x400/?car,automobile" alt="card__image" class="card__image" width="600">
+            </div>
+            <div class="card__body">
+              <span class="tag tag-red">Automobile</span>
+              <h4>Race to your heart content</h4>
+              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi perferendis molestiae non nemo doloribus. Doloremque, nihil! At ea atque quidem!</p>
+            </div>
+            <div class="card__footer">
+              <div class="user">
+                <div class="user__info">
+                  <h5>John Doe</h5>
+                  <small>2d ago</small>
+                </div>
+              </div>
+            </div>
+      </div></a>
+      </div>
 </body>
 </html>
