--- a/index.html
+++ b/index.html
@@ -81,8 +81,8 @@
                 </div>
             </div>
         </div>
-        <div class="partitions" id = "WorkH">
-            <h1 class="heading" style="color: white;"><center>Our Work</center></h1>
+        <div class="partitions" id = "Work">
+            <h1 id="WorkH" style="color: white"><center>Our Work</center></h1>
         </div>
         <div class="partitions" id = "Work">
             <a href = "#Work">
