--- a/team.html
+++ b/team.html
@@ -92,20 +92,20 @@
         <h1 class="heading" style="color: white;"><center>Advisory Board</center></h1>
         <div class="content">
             <!-- card -->
-            <a href=""  target="blank_" class="card">
+            <a href="https://twitter.com/tanav_bhatia"  target="blank_" class="card">
             <img src="image/Tanav Bhatia.jpg" class="cardimg"/>
             <div class="cardtext">
                     <p class="title">Tanav Bhatia</p> 
                     <p class="text"></p>
             </div></a>
-            <a href="" target="blank_" class="card">
-            <img src="image/Vani Sen.jpg" class="cardimg"/>
+            <a href="https://www.linkedin.com/in/anshika-raj-b40686228/" target="blank_" class="card">
+            <img src="image/Anshika Raj.png" class="cardimg"/>
             <div class="cardtext">
                     <p class="title">Anshika Raj</p> 
                     <p class="text"></p>
             </div></a>
             <a href="https://www.linkedin.com/in/android-aggarwal"  target="blank_" class="card">
-            <img src="image/Vani Sen.jpg" class="cardimg"/>
+            <img src="" class="cardimg"/>
             <div class="cardtext">
                     <p class="title">Anirudh Aggarwal</p> 
                     <p class="text"></p>
@@ -121,7 +121,7 @@
             <!-- card -->
             
             <a href="https://www.linkedin.com/in/vigaas-singh-8521321b3"  target="blank_" class="card">
-            <img src="image\Vardaan Gahlot .jpg" class="cardimg"/>
+            <img src="" class="cardimg"/>
             <div class="cardtext">
                     <p class="title">Vigaas Singh</p> 
                     <p class="text"></p>
