--- a/index.html
+++ b/index.html
@@ -200,6 +200,15 @@
                 </div>
             </a>
         </div>
+        <div class="contact-us-title">
+            <h1 class="heading" style="color: white;"><center>Contact Us</center></h1>
+        </div>
+        <div class="contact-icons">
+            <a href="#"><span>Mail Us</span></a>
+            <a href="#"><span>Mail Us again!</span></a>
+            <a href="#"><span>Call Us</span></a>
+            <a href="#"><span>Call Us again!</span></a>
+        </div>
     </div>
 </body>
 </html>
